# 42_corewar

./: .gitignore  CMakeLists.txt  Makefile  README.md  tester
bots/: 42.s  Backward.s  bot.s  ex.s  lfork.cor  lfork.s  new.s  simple.cor  simple.s  stealer.cor  stealer.s  virus.cor  virus.s
include/: abstract_cpu.h  array.h  asm.h  disassembler.h  error.h  errors.h  fsm.h  id_states.h  lex_conditions.h  lexer.h  op.h  opcalls.h  thread_array.h  utils.h  vm.h  vs.h
libft/: CMakeLists.txt  Makefile
libft/includes/: libft.h
libft/libft/src/: ft_lstaddback.c
libft/src/: form_num_char.c  ft_array_print.c  ft_atoi_hex.c  ft_bzero.c  ft_charlen.c  ft_color_input.c  ft_itoa_double.c  ft_itoa_prntf.c  ft_parcer_printf.c  ft_print_list.c  ft_printf_fd.c  ft_putchar_u.c  ft_strdup_u.c  ft_string_to_number.c  ft_strlen_u.c  ft_strndup_u.c  ft_strnew.c  ft_strnum_base.c  ft_swap.c  printf.c
libft_o/: CMakeLists.txt
libft_o/includes/: libft.h
libft_o/src/: form_num_char.c  ft_countwords.c  ft_max_number.c  ft_print_list.c  ft_printbits_printf.c  ft_putstr_u.c  ft_round_double.c  ft_strcmp.c  ft_swap_d.c
src/: load_from_file.c  main.c  op.c
src/asm/: bcode.c  calc_lable.c  filename.c  lable.c  main.c  op.c  subfunctions.c  validation.c
src/asm/disassembler/: disassembler.c  do_operation.c  get_big_endian_num.c  get_header.c  get_type_arg.c  read_binary.c
src/asm/lexer/: error.c  finite_state_machine.c  init_lexer.c  lexer.c  main.c  read_table_from.c  read_text.c  str_cmp.c
src/asm/lexer/graph/: FSM (COREWAR).xlsx  fsm  machine
src/asm/lexer/id_state/: id_state0.c  id_state1.c  id_state2.c
src/asm/lexer/lex_condition/: at_right_state.c  lex_condition0.c  lex_condition1.c  lex_condition2.c  lex_condition3.c
src/asm/lexer/list_operations/: label_list_operations.c  op_list_operations.c  token_list_operations.c
src/vm/: abstract_cpu.c  abstract_cpu1.c  abstract_cpu2.c  array.c  array_find.c  array_insert.c  array_size.c  decode.c  decode_param.c  ft_memswap.c  get_force_param_type.c  get_options.c  get_param_type.c  handle_error.c  load_from_file.c  main.c  op.c  opcalls.c  opcalls1.c  opcalls2.c  opcalls3.c  opcalls4.c  thread_array.c  utils.c  utils2.c  vm.c  vm_cycle.c
src/vm/vs/: print_info.c  print_memory.c  sub_fns.c  vs_init.c  vs_main.c
